test_suite/ERROR_bad_index.java
class Main {
  public static void main(String[] a) { }
}

class A {
  public boolean foo() {
    boolean[] a;
    boolean b;
    b = a[true];
    return true;
  }
}
